# zjmud-android-standalone

./: .gitignore  AGENT.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/zjmud/android/: ServiceLifecycleTest.kt
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/zjmud/android/: FaultInjectionReceiver.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/runtime/: manifest.properties
app/src/main/assets/web/: index.html  main.css  main.js
app/src/main/assets/web/js/: main.js
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/java/com/zjmud/android/: LocalMudConnection.kt  MainActivity.kt  MudForegroundService.kt  NativeBridge.kt  RuntimeDeployer.kt
app/src/main/res/values/: strings.xml  styles.xml
docs/: AI_DEVELOPMENT_ROADMAP.md  AI_TRAVEL_SCHEMA.md  ARCHITECTURE.md  BUILD_AND_RELEASE.md  DEVELOPMENT_ENVIRONMENT.md  IMPLEMENTATION_PLAN.md  MARTIAL_ARTS_EXPANSION_PLAN.md  ORIGINAL_PLOT_COMBAT_SPEC.md  ORIGINAL_PLOT_NPC_LIFECYCLE.md  REQUIREMENTS.md  RISK_REGISTER.md  STORY_IMPLEMENTATION_PLAN.md  TEST_PLAN.md
native/fluffos/src/: .gitignore  backend.cc  backend.h  cc.h  configure.h  fliconv.cc  fliconv.h  local_options  mainlib.cc
native/fluffos/src/base/internal/: strutils.h
native/fluffos/src/vm/internal/: applies_table.autogen.cc  applies_table.autogen.h  efuns.autogen.cc  efuns.autogen.h  options.autogen.h
native/fluffos/src/vm/internal/compiler/: compiler.cc  grammar.autogen.cc  grammar.autogen.h
story-design/: 01-世界观基线.md  02-剧情分布盘点.md  03-剧情设计原则与模板.md  04-首章样板-一纸乡书.md  05-前五章总纲-乡书篇.md  06-第二章-旧印新痕.md  07-第三章-夜渡无声.md  08-第四章-故园来客.md  09-第五章-百川归处.md  10-第六至十章总纲-名帖篇.md  11-第六章-余簿成风.md  12-第七章-借名行舟.md  13-第八章-三山同帖.md  14-第九章-听潮有楼.md  15-第十章-名归何处.md  16-前十章重构总纲-无面局.md  README.md
tools/: ai_admin_smoke.py  import_zjmud.sh  plot_arc_hardening.py  plot_chapter1_smoke.py  plot_chapter2_recovery.py  plot_chapter2_smoke.py  plot_chapter3_recovery.py  plot_chapter3_smoke.py  plot_chapter4_recovery.py  plot_chapter4_smoke.py  plot_chapter5_recovery.py  plot_chapter5_smoke.py  test_ai_player_recovery.py  test_ai_player_stability.py  test_ai_player_startup.sh  test_ai_travel.py  test_plot_platform.py
tools/mudlib/: ai-playerd.c  ai-test-blocked-room.c  ai-test-dummy.c  ai-test-retreat-room.c  ai-test-room.c  ai-test-safe-room.c  ai-travel.c  ai_players.patch  aiplayer.c  attribute-skilld.c  attribute_skill_retention.patch  challenger_level.patch  challenger_runtime.patch  character-skilld.c  character_skill_retention.patch  cultivation_success_boost.patch  death-shenxun.c  full_character_save.patch  fullsave.c  help-wizard-commands  hide_room_paths.patch  offline-cmwhod.c  offline-dns-master.c  offline-finger-service.c  offline-gchannel.c  offline-messaged.c  offline-network-service.c  offline-payd.c  offline-telnet.c  offline-versiond.c  quest_commands.patch  quest_fly.patch  remove_anticheat.patch  runtime_error_fixes.patch  shaolin_unarmed_rewards.patch  singleplayer_boosts.patch  static_admins.patch  wizard_reward_repair.patch  zuoyou-hubo.c
tools/mudlib/plot/adm/daemons/: plotcombat.c  plotd.c
tools/mudlib/plot/adm/daemons/plot/: origin_letter.c  returning_mark.c  silent_crossing.c  visitors_from_home.c  where_rivers_end.c
tools/mudlib/plot/clone/plot/origin_letter/: old_post_token.c  pei_jiu.c
tools/mudlib/plot/clone/plot/returning_mark/: meng_si.c  qing_peng_ke.c  wave_mark_rubbing.c
tools/mudlib/plot/clone/plot/silent_crossing/: a_he.c  liu_dashao.c  luo_qiniang.c  relabelled_stub.c
tools/mudlib/plot/clone/plot/visitors_from_home/: hua_yaozi.c  salt_invitation.c  stone_seven.c
tools/mudlib/plot/clone/plot/where_rivers_end/: hometown_memorial.c  luo_qiniang.c  qimei_staff.c  real_lu_xiaoshuan.c  wen_shouzhuo.c
tools/mudlib/plot/cmds/adm/: plotadmin.c
tools/mudlib/plot/cmds/usr/: plot.c
tools/mudlib/plot/d/plot/origin_letter/: grain_house.c  hall.c  warehouse.c
tools/mudlib/plot/d/plot/origin_letter/npc/: tan_youji.c  xu_sanniang.c  zhou_shouyi.c
tools/mudlib/plot/d/plot/returning_mark/: mark_chamber.c  old_storehouse.c
tools/mudlib/plot/d/plot/silent_crossing/: bilge.c  boat_deck.c  cargo_hold.c  foredeck.c  narrow_passage.c  stern.c
tools/mudlib/plot/d/plot/visitors_from_home/: post_road.c  relay_court.c
tools/mudlib/plot/d/plot/where_rivers_end/: assembly_floor.c  burning_archive.c  dark_cell.c  drain_tunnel.c  guard_walk.c  index_room.c  inspection_yard.c  instance_room.c  outer_gallery.c  salt_gate.c  seal_chamber.c  water_gate.c
tools/mudlib/shop/: xidian.c  xingge.c
tools/web/: local-transport.js  main.android.patch
tools/zjmud_patch/: README.md  web_frontend.patch
